# scribble

./: .gitignore  README.md
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/assets/: settings.gif:Zone.Identifier
frontend/src/components/: Chat.css  Chat.tsx  CurrentWord.tsx  GameBoard.css  GameBoard.tsx  GuessBar.css  GuessBar.tsx  Input.css  Input.tsx  Leaderboard.css  Leaderboard.tsx  RoundTracker.css  RoundTracker.tsx  Settings.css  Settings.tsx  Title.css  Title.tsx
frontend/src/hooks/: useWebSocket.tsx
frontend/src/types/: ChatProps.tsx  CurrentWordProps.tsx  GameBoardProps.tsx  GuessBarProps.tsx  InputProps.tsx  LeaderboardProps.tsx  RoundTrackerProps.tsx  SettingsProps.tsx  TitleProps.tsx
scribble/: README.md  folder-structure.txt  main.py  pyproject.toml
scribble/models/: __init__.py
scribble/models/protos/: scribble_types.proto
scribble/src/app/: __init__.py  websocket_app.py
scribble/src/app/operations/: base.py  next_word.py
scribble/src/models/: __init__.py
scribble/src/models/protos/: scribble_types.proto
scribble/src/models/util/: generate_models.py
scribble/src/services/guess_generator/: __init__.py  main.py
scribble/src/services/store/: __init__.py  storage_service.py
scribble/src/util/: parse.py
scribble/tests/: conftest.py  test_parse.py  test_websocket.py
scribble/util/: parse.py
