[project]
name = "scribble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "grpcio-tools>=1.82.1",
    "protobuf>=7.35.1",
    "redis>=8.0.1",
    "ruff>=0.15.21",
    "websockets>=16.1",
]

[tool.uv]
package = true

[project.scripts]
gen-datamodels = "models.util.generate_models:main"

[dependency-groups]
dev = ["ruff>=0.15.21"]
