[project]
name = "scribble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "grpcio-tools>=1.82.1",
    "httpx2>=2.7.0",
    "protobuf>=7.35.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "redis>=8.0.1",
    "ruff>=0.15.21",
    "websockets>=16.1",
]

[tool.uv]
package = true

[project.scripts]
gen-datamodels = "models.util.generate_models:main"

[tool.pytest.ini_options]
addopts = "-s -vvv --cov=src/ --cov-branch --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/models/*", "src/scripts/*", "*/__init__.py"]


[dependency-groups]
dev = ["ruff>=0.15.21"]
